lustre/include/obd_support.h
@@ -882,10 +882,11 @@ do {									      \
 #define OBD_ALLOC_LARGE(ptr, size)                                            \
 do {                                                                          \
 	/* LU-8196 - force large allocations to use vmalloc, not kmalloc */   \
-	if ((size) > KMALLOC_MAX_SIZE)                                          \
+	if ((size) > KMALLOC_MAX_SIZE)                                        \
 		ptr = NULL;                                                   \
-	else                                                                  \
-		OBD_ALLOC_GFP(ptr, size, GFP_NOFS | __GFP_NOWARN);            \
+	else								      \
+		OBD_ALLOC_GFP(ptr, size, GFP_NOFS | __GFP_NOWARN |	      \
+			      (((size) > PAGE_SIZE) ? __GFP_NORETRY : 0));    \
 	if (ptr == NULL)                                                      \
                 OBD_VMALLOC(ptr, size);                                       \
 } while (0)
